tests/ui/parser/pat-lt-bracket-6.stderr
error: expected one of `)`, `,`, `@`, or `|`, found `[`
  --> $DIR/pat-lt-bracket-6.rs:5:19
   |
LL |     let Test(&desc[..]) = x;
   |                   ^
   |                   |
   |                   expected one of `)`, `,`, `@`, or `|`
   |                   help: missing `,`

error[E0308]: mismatched types
  --> $DIR/pat-lt-bracket-6.rs:9:30
   |
LL | const RECOVERY_WITNESS: () = 0;
   |                              ^ expected `()`, found integer

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
